第2部の★を解消